[tool.poetry]
name = "alpaca-lora"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "~2.2.2"
accelerate = "^0.31.0"
appdirs = "^1.4.4"
loralib = "^0.1.2"
black = {extras = ["jupyter"], version = "^24.4.2"}
datasets = "^2.19.2"
fire = "^0.6.0"
peft = {git = "https://github.com/huggingface/peft.git"}
transformers = ">=4.28.0"
sentencepiece = "^0.2.0"
gradio = "^4.36.1"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
